Section title consistency fix + Dobble playable

--- a/PersonalGames/DriftRacer.html
+++ b/PersonalGames/DriftRacer.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
             margin: 20px auto;
             font-family: Arial, sans-serif;
             color: #333;
-        }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
         }
 
         .textBlock {
@@ -49,24 +41,24 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT DRIFT RACER</div>
+    <div class="sectionSubtitle">ABOUT DRIFT RACER</div>
     <div class="textBlock">
         Drift racer is a fast paced racing game focused on high speeds and drifting mechanics. Players can choose from a variety of cars, and a variety of tracks, each with their own unique challenges and layouts. The game is focused on being arcade oriented with each track designed to take no longer than 1 minute to complete. The game boasts a vibrant cel-shaded art style with bright colours, an effective use of shaders, and a low poly art style for greater contrast.
     </div>
-    <div class="sectionTitle">MEDIA</div>
+    <div class="sectionSubtitle">MEDIA</div>
     <div class="video-wrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/QfvvStJYCaE?si=kSohq03VsZXivnG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/aue7iT2zAX4?si=ymGELySRQrcQ0pb1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-    <div class="sectionTitle">WHY DRIFT RACER EXISTS</div>
+    <div class="sectionSubtitle">WHY DRIFT RACER EXISTS</div>
     <div class="textBlock">
         Drift racer was created as a part of my university coursework, specifically for a module focused on producing software within a team, and pitching said software to investors. The game was developed over a period of 6 weeks, with a team of 4 people including myself. While the main objective of the assignment was simply to create and present a presentation, we decided to go the extra mile and produce a polished game that could be added to our portfolios.
     </div>
-    <div class="sectionTitle">MY CONTRIBUTIONS</div>
+    <div class="sectionSubtitle">MY CONTRIBUTIONS</div>
     <div class="textBlock">
         I worked as the project lead and primary developer on Drift Racer. Within my group i was the only person with any experience developing games and therfore acted as a teacher to my team members. I was responsible for creating the core drive mechanics including the drifting system, car physics, and track design. Additionally i handled the art direction ensuring a coheasive visual style accross the game. I also managed the project timeline, delegated tasks to team members, and ensured effective communication within the team to meet deadlines and deliver a polished final product.
     </div>
-    <div class="sectionTitle">MY PROUDEST ADDITIONS</div>
+    <div class="sectionSubtitle">MY PROUDEST ADDITIONS</div>
     <div class="textBlock">
         As the main 3d artist on the project, I'm most proud of my shader graph work, alongside my map design and modelling. The shader graph work involved creating a lava shader that effectively simulated the look of molten lava, alongside this the overall game design was something i took great pride in, ensuring each track was fun, engaging, and flowed smoothly for players.
     </div>
