--- a/PersonalGames/Dungeon.html
+++ b/PersonalGames/Dungeon.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
             margin: 20px auto;
             font-family: Arial, sans-serif;
             color: #333;
-        }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
         }
 
         .textBlock {
@@ -49,7 +41,7 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT MY DUNGEON GENERATOR</div>
+    <div class="sectionSubtitle">ABOUT MY DUNGEON GENERATOR</div>
     <div class="textBlock">
         Throughout the years i've been trying to perfect my dungeon generation algorithm, with the goal of creating a system that can produce varied and intersting dungeons in ways that no other dungeon crawler game has achieved. The current iteration of my dungeon generator uses a combination of physics based room placement, backtracking, and convex decomposition (VHACD) to create dungeons that are both interesting to explore and irregular in shape. One of my main focuses was to avoid a grid based system to allow for more organic and varied room shapes, as well as to create a more immersive experience for players.
     </div>
