--- a/PersonalGames/TalkingBen.html
+++ b/PersonalGames/TalkingBen.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
             margin: 20px auto;
             font-family: Arial, sans-serif;
             color: #333;
-        }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
         }
 
         .textBlock {
@@ -53,11 +45,11 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT TALKING BEN'S REVENGE</div>
+    <div class="sectionSubtitle">ABOUT TALKING BEN'S REVENGE</div>
     <div class="textBlock">
         Talking ben's revenge is a boss fight game created as a fan game for the streamer 'IShowSpeed'. The game capatalised on the talking ben trend that was popular on tiktok at the time. The game has been streamed by IShowSpeed garnering over 1,000,000 views, resulting in 500+ downloads from my GameJolt page. The combat mechanics are simple but enaging, providing a challenging experience to players. Creating and releasing this game gave me a taste of success and motivated me to keep developing games in the future.
     </div>
-    <div class="sectionTitle">MEDIA</div>
+    <div class="sectionSubtitle">MEDIA</div>
     <div class="video-wrapper">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/VFlq-S2TpqA?si=eDffzs5zsfi9R9ad" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TVAOViMVuzk?si=BlcqMwbcBRFzuSfC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
