--- a/ProfessionalGames/Afcb.html
+++ b/ProfessionalGames/Afcb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
@@ -9,15 +9,7 @@
             font-family: Arial, sans-serif;
             color: #333;
         }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
-        }
-
+        
         .textBlock {
             font-size: 16px;
             line-height: 1.5;
@@ -49,11 +41,11 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT AFCB GAME</div>
+    <div class="sectionSubtitle">ABOUT AFCB GAME</div>
     <div class="textBlock">
         This is an unannounced game developed in collaboration with Bournemouth Football Club. While full details cannot be shared yet, the title is being built for WebGL and is designed to be embedded directly into the official AFC Bournemouth website and mobile app. The game has been tested at afcb junior cherries events and has received positive feedback from young players and their families. The game aims to engage fans of all ages, providing an interactive experience that complements the club's brand and community initiatives.
     </div>
-    <div class="sectionTitle">MY CONTRIBUTIONS</div>
+    <div class="sectionSubtitle">MY CONTRIBUTIONS</div>
     <div class="textBlock">
         I was the main developer on this project from the beginning until its current state. The most notworthy contributions i made to the project included the implementation of global and timed leaderboards, interfacing with an online CMS to allow for dynamic content updates, and the development of a robust scoring and reward system to enhance player engagement. Additionally, I optimized the game's performance for web deployment, ensuring smooth gameplay across various devices and browsers.
     </div>
