--- a/ProfessionalGames/DobbleAds.html
+++ b/ProfessionalGames/DobbleAds.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
             margin: 20px auto;
             font-family: Arial, sans-serif;
             color: #333;
-        }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
         }
 
         .textBlock {
@@ -42,6 +34,9 @@
         <source src="Media/ShowReel.mp4" type="video/mp4">
     </video>
     Playable Dobble Ad
+    <div class="storeLinkWrapper">
+        <a class="storeLink standardStoreLink" href="DobblePlayable.html" target="_blank" rel="noopener noreferrer"></a>
+    </div>
     <div class="gameTypeWrapper">
         <div class="gameType">HTML</div>                
         <div class="gameType">JS</div>                
@@ -49,11 +44,11 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT PLAYABLE DOBBLE AD</div>
+    <div class="sectionSubtitle">ABOUT PLAYABLE DOBBLE AD</div>
     <div class="textBlock">
         This was a project involving the creation of playable ads for the app Dobble Go. The ads were designed to engage users by allowing them to interact with a mini-game that showcased the features of Dobble Go. The playable ad was developed using HTML, CSS, and JavaScript, ensuring compatibility across various devices and platforms. The goal was to provide an immersive experience that would entice users to download and try out the full game.
     </div>
-    <div class="sectionTitle">MY CONTRIBUTIONS</div>
+    <div class="sectionSubtitle">MY CONTRIBUTIONS</div>
     <div class="textBlock">
         This was my first experience working with HTML JS and CSS. I learnt how to create interactive web content and optimize it for performance within two weeks, programming my own physics and particle system. Playable ads require that all assets are inline, and therfore i learned about encoding images and audio into base64 strings to be used within the code. I also had to learn about the limitations of playable ads, such as file size restrictions and performance constraints, and how to work within these limitations to create an effective ad.
     </div>
