--- a/ProfessionalGames/Loah.html
+++ b/ProfessionalGames/Loah.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
             margin: 20px auto;
             font-family: Arial, sans-serif;
             color: #333;
-        }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
         }
 
         .textBlock {
@@ -49,11 +41,11 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT LIFE OF A HUSTLER</div>
+    <div class="sectionSubtitle">ABOUT LIFE OF A HUSTLER</div>
     <div class="textBlock">
         Life of a Hustler is a fast-paced, work-in-progress arcade game inspired by the bold mindset behind the Life of a Hustler brand. It puts players in the shoes of an up-and-coming entrepreneur fighting their way to the top, while the world tries to push them back down. Run a high-pressure shop, serve customers at speed, manage stock levels, balance finances, and survive a constant stream of bills and setbacks. The odds are stacked against you, but that’s the point — hustlers don’t fold. They adapt, grind, and flip the script. Through its gameplay loop, Life of a Hustler highlights the grind, the obstacles, and the small wins that eventually turn into big victories. Your goal isn’t just to stay afloat — it’s to rise. Turn pressure into progress, chaos into cash flow, and earn your place at the top. Check out the brand and learn more about Life of a Hustler on their official website: <a href="https://lifeofahustler.co.uk" target="_blank" rel="noopener noreferrer">https://lifeofahustler.co.uk</a>.
     </div>
-    <div class="sectionTitle">STATE OF THE GAME</div>
+    <div class="sectionSubtitle">STATE OF THE GAME</div>
     <div class="textBlock">
         I began working with the Life of a Hustler brand in january. As the sole freelance developer, i have the role of programming the game, developing 3D assets, and creating promotional material. Utilising my own core tech systems i have been able to rapidly prototype the game. The game is currently in its alpha stages, going through a rigorous playtesting approach inspired by the methodology of Valve.
     </div>
