--- a/PersonalGames/CrushDepth.html
+++ b/PersonalGames/CrushDepth.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
             margin: 20px auto;
             font-family: Arial, sans-serif;
             color: #333;
-        }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
         }
 
         .textBlock {
@@ -52,23 +44,23 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT CRUSH DEPTH</div>
+    <div class="sectionSubtitle">ABOUT CRUSH DEPTH</div>
     <div class="textBlock">
         Crush depth is a first person immersive story game set in the depths of the ocean, created for the 'Cosmic Horror Jam 3'. Players take on the role of a grieving diver, attempting to escape the cluthes of the water depths. The game features atmospheric underwater environments, open exploration, and simulation of submarine mechanics. As players navigate the underwater world, they encounter various challenges and obstacles, avoiding deep sea leviathans while uncovering the mystery behind a cave with a strange biological presence.
     </div>
-    <div class="sectionTitle">MEDIA</div>
+    <div class="sectionSubtitle">MEDIA</div>
     <div class="video-wrapper">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YlyVbTAj-Rc?si=BeP7dwUJz7auCcAF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-    <div class="sectionTitle">GAME JAM RESULTS</div>
+    <div class="sectionSubtitle">GAME JAM RESULTS</div>
     <div class="textBlock">
         Post game jam we recieved lots of positive feedback from players, with many praising the games visuals and immerson. We achieved 12th place overall and 8th place in the 'Best Visuals' category out of 132 entries. This was the 'Cosmic Horror Jam 3', lasting 2 weeks, which had the keyword of 'Submerged'.
     </div>
-    <div class="sectionTitle">MY CONTRIBUTIONS</div>
+    <div class="sectionSubtitle">MY CONTRIBUTIONS</div>
     <div class="textBlock">
         Me and my friend collaborated on this project, with me taking the main lead. I was responsible for the first week and a half of development, creating all the core systems and mechanics. This included the underwater movement system, submarine controls, environmental design, AI navigation, concepting, storyboarding, lighting, sound design, and level design. My friend then took over for the final few days, adding additional polish, an ending to the story, and publishing the game to itch.
     </div>
-    <div class="sectionTitle">MY PROUDEST ADDITIONS</div>
+    <div class="sectionSubtitle">MY PROUDEST ADDITIONS</div>
     <div class="textBlock">
         I'm most proud of programming the underwater enemy AI, which involved a system where a blind leviathan would patrol the underwater caves, using sound detection to locate the player. It was particularly challenging to teach the AI to believebly navigate the complex underwater environment, avoiding obsticals and reacting to the players movement. The entire sequence of evading the leviathan resulted in a tense and immersive gmaeplay experienced, which was praised by players. Alongside this i created an atmospheric intro cutscene that set the tone for the game, taking advantage of post processing and sound design to create a sense of dread and isolation.
     </div>
