--- a/ProfessionalGames/VolcanoIsland.html
+++ b/ProfessionalGames/VolcanoIsland.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../GameDevStyle.css">
+    <link rel="stylesheet" href="../style.css">
     <style>
         .contentWrapper {
             width: 80%;
             margin: 20px auto;
             font-family: Arial, sans-serif;
             color: #333;
-        }
-
-        .sectionTitle {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
         }
 
         .textBlock {
@@ -53,19 +45,19 @@
     </div>
 </div>
 <div class="contentWrapper">
-    <div class="sectionTitle">ABOUT VOLCANO ISLAND</div>
+    <div class="sectionSubtitle">ABOUT VOLCANO ISLAND</div>
     <div class="textBlock">
         Volcano island is a sim game with the goal to grow a resort island empire, attracting tourists and managing resources. Players start with a small island and limited funds, gradually expanding their resort by constructing various buildings, amenities, and attractions to entice visitors. The game features a unique island system where players use volcanic eruptions to create new landmasses, adding a strategic layer to island expansion.
     </div>
-    <div class="sectionTitle">MEDIA</div>
+    <div class="sectionSubtitle">MEDIA</div>
     <div class="video-wrapper">
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dYei2CmpvN0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="sectionTitle">MY CONTRIBUTIONS</div>
+    <div class="sectionSubtitle">MY CONTRIBUTIONS</div>
     <div class="textBlock">
         I picked up this game post initial launch, with the objective to improve and expand the game based on user feedback. My contributions included optimizing performance to ensure smooth gameplay on mobile devices, implementing new features such as additional buildings and attractions, and enhancing the user interface for better player experience. I also worked on bug fixes and balancing gameplay mechanics to improve overall enjoyment. Additionally i worked on monitizing the game where IAPs where largely absent before my involvement.
     </div>
-    <div class="sectionTitle">MY PROUDEST ADDITIONS</div>
+    <div class="sectionSubtitle">MY PROUDEST ADDITIONS</div>
     <div class="textBlock">
         One of my proudest additions to Volcano Island was the implementation of a mesh combining system, which significantly improved the game's performance on mobile devices. By reducing the number of draw calls, I was able to enhance frame rates and overall gameplay smoothness.
     </div>
